--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Don't worry I am coming 
     <h3>I am agree with you</h3>
     </h2>
+    <img src="images/rakib.jpg" alt="Rakib's pic">
 </body>
 </html>
