--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h1>Hello bro siam, I am using git</h1>
-    <h2>Don't worry I am coming 
+    <h2>Don't worry I am coming </h2>
     <h3>I am agree with you</h3>
-    </h2>
+    <p>Let's talk about second branch</p>
+    <p>this line added in my second branch</p>
     <img src="images/rakib.jpg" alt="Rakib's pic">
 </body>
 </html>
