--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>I am agree with you</h3>
     <p>Let's talk about second branch</p>
     <p>this line added in my second branch</p>
+    <p><b>adding more code in my 2nd branch</b></p>
     <img src="images/rakib.jpg" alt="Rakib's pic">
 </body>
 </html>
